--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,7 +29,7 @@ endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
 file.reference.sqlite-jdbc-3.7.2.jar=/Users/Toni/Documents/Universitat/AD/LAB/JARs/sqlite-jdbc-3.7.2.jar
-file.reference.sqlite-jdbc-3.7.2.jar-1=/Users/aleixabrieprat/Documents/FIB/7e quadrimestre/ad/lab/sqlite-jdbc-3.7.2.jar
+file.reference.sqlite-jdbc-3.7.2.jar-2=/Users/Toni/Documents/Universitat/AD/LAB/JARs/sqlite-jdbc-3.7.2.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -44,7 +44,7 @@ j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
-    ${file.reference.sqlite-jdbc-3.7.2.jar-1}
+    ${file.reference.sqlite-jdbc-3.7.2.jar-2}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
